--- a/templates/index.html
+++ b/templates/index.html
@@ -69,9 +69,8 @@
             }
         }
 
-        // Atualiza a cada 10 segundos
         fetchSignals();
-        setInterval(fetchSignals, 10000);
+        setInterval(fetchSignals, 10000); // atualiza a cada 10 segundos
     </script>
 </body>
 </html>
